[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fruit/apple.png" type="Texture" id=1]
[ext_resource path="res://Fruit/Timer.gd" type="Script" id=2]
[ext_resource path="res://Fruit/Fruit.gd" type="Script" id=3]
[ext_resource path="res://Fruit/cherry.png" type="Texture" id=4]
[ext_resource path="res://Fruit/cherry 2.png" type="Texture" id=5]
[ext_resource path="res://Fruit/cherry 3.png" type="Texture" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 44.71

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "wobble",
"speed": 7.5
} ]

[node name="Fruit" type="StaticBody2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
visible = false
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
[connection signal="body_entered" from="detection_area" to="Timer" method="_on_detection_area_body_entered"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="Timer" method="_on_detection_area_body_exited"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
